--- a/impls/ocaml2/Makefile
+++ b/impls/ocaml2/Makefile
@@ -1,9 +1,9 @@
 OCAMLC = ocamlc
 OCAMLOPT = ocamlfind ocamlopt -package re -linkpkg
 
-SOURCES = reader.ml printer.ml env.ml
+SOURCES = reader.ml printer.ml env.ml core.ml
 OBJECTS = $(SOURCES:%.ml=%.cmx)
-STEPS = step0_repl step1_read_print.ml step2_eval.ml step3_env.ml
+STEPS = step0_repl step1_read_print.ml step2_eval.ml step3_env.ml step4_if_fn_do.ml
 STEPS_BINS = $(STEPS:%.ml=%)
 
 EXECUTABLE = my_program
